--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=https://chatterbox-3bwf.onrender.com
+REACT_APP_API_URL=http://localhost:4000
+url=https://chatterbox-3bwf.onrender.com
